objects/ASI_HK_CRM_SO_Routing_Table_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_HK_CRM_Approver_No__c</fullName>
        <label>Approver No.</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Approver_Role_Name__c</fullName>
        <inlineHelpText>Option, If this field have value the system will check if the approver&apos;s Role Name match the values in this field. Only fill in the approver if the values are match. Values separated by &quot;||&quot;</inlineHelpText>
        <label>Approver Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SO_Routing_Table_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Field_API_Name_1__c</fullName>
        <label>Field API Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Field_API_Name_2__c</fullName>
        <label>Field API Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Field_API_Name_3__c</fullName>
        <label>Field API Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Jump_to_New_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In coming routing details, use the user field from current approver</inlineHelpText>
        <label>Jump to New User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SO_Routing_Table_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SO Routing Table Header</label>
        <referenceTo>ASI_HK_CRM_SO_Routing_Table_Header__c</referenceTo>
        <relationshipLabel>SO Routing Table Details</relationshipLabel>
        <relationshipName>SO_Routing_Table_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Skip_this_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip this Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Step_Approver__c</fullName>
        <formula>if(  ISBLANK(ASI_HK_CRM_User_Field__c ) , ASI_HK_CRM_Approver__r.FirstName + &quot; &quot;+ASI_HK_CRM_Approver__r.LastName, ASI_HK_CRM_User_Field__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_To_Update_Field_API_Name_1__c</fullName>
        <label>To Update Field API Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_To_Update_Value_1__c</fullName>
        <label>To Update Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_User_Field__c</fullName>
        <label>User Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Value_1__c</fullName>
        <label>Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Value_2__c</fullName>
        <label>Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Value_3__c</fullName>
        <label>Value 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SO Routing Table Detail</label>
    <nameField>
        <displayFormat>SORTD-{0000}</displayFormat>
        <label>SO Routing Table Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SO Routing Table Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_HK_CRM_SO_Routing_Table_Detail_Specfic_User</fullName>
        <active>true</active>
        <label>Specific User</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_SO_Routing_Table_Detail_User_Field</fullName>
        <active>true</active>
        <label>User Field</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>